[gd_scene load_steps=4 format=3 uid="uid://b6vouogbmd2us"]

[ext_resource type="Theme" uid="uid://bfqvhpwoqicre" path="res://assets/resource/theme/main_theme.tres" id="1_ysi31"]
[ext_resource type="Script" path="res://gui/panel/question_panel/question_panel.gd" id="2_ruil2"]
[ext_resource type="PackedScene" uid="uid://bwweoq10c48qi" path="res://extra/sfx/sfx_control.tscn" id="4_mncd4"]

[node name="QuestionPanel" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ysi31")
script = ExtResource("2_ruil2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.305882, 0.454902, 0.615686)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -169.0
offset_right = 242.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 468.0
offset_top = -7.0
offset_right = 525.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 24
text = "x"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_top = 2.0
offset_right = 484.0
offset_bottom = 338.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TimerLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "00:00"

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="QuestLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/0"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="ContentLabel" type="RichTextLabel" parent="Panel/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
text = "Content"
fit_content = true

[node name="AnswerGrid" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="AnswerList" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="sfx_control" parent="." instance=ExtResource("4_mncd4")]
root_node = NodePath("../Panel")

[node name="Timer" type="Timer" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
